--- a/package.json
+++ b/package.json
@@ -1,15 +1,11 @@
 {
-  "name": "my-project",
+  "name": "front-end-masters-will-sentance-the-hard-parts",
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
-  },
+  "scripts": {},
   "devDependencies": {
     "typescript": "^5.3.3",
-    "vite": "^5.0.10"
+    "vite": "^5.0.11"
   }
 }
